<resources>
    <string name="app_name">MyEntregable</string>
    <string name="nombre">Nombres Y Apellidos</string>
    <string name="durar">Duración cita</string>
    <string name="servic">Servicio</string>
    <string name="agendar">Agendar</string>
    <string name="mostrarn">mostrar nombre</string>
    <string name="mostrard">mostrar duracion</string>
    <string name="mostrars">mostrar servicio</string>
    <string name="calendar">Calendario</string>
    <string name="web">Ir a ver diseños</string>
    <string name="pag">Llamar al Spa</string>
    <string name="spa">Ir a video spa</string>
</resources>