<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">


    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/idnombre"
            android:hint="Nombre Y Apellidos"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/nombre"
            android:gravity="center"
            android:layout_weight="1">

        </EditText>

    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/iddurar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/durar"
            android:gravity="center"
            android:layout_weight="1">

        </EditText>

    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/idservic"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/servic"
            android:gravity="center"
            android:layout_weight="1">

        </EditText>

    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">


        <Button
            android:id="@+id/idagendar"
            android:text="@string/agendar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </Button>

    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">


        <Button
            android:id="@+id/abrir_web"
            android:text="@string/web"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </Button>

    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">


        <Button
            android:id="@+id/ir_apag"
            android:text="@string/pag"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </Button>

    </LinearLayout>
    <LinearLayout
        android:gravity="center"
        android:layout_marginTop="5dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="273dp"
            android:layout_height="114dp"
            app:srcCompat="@mipmap/spa" />

    </LinearLayout>
</LinearLayout>
